--- a/my.kv
+++ b/my.kv
@@ -102,19 +102,19 @@
 
     Image:
         id: obs2
-        size: root.width, root.width/30
-        pos: 0, root.center_y - root.width/60
+        size: root.width, root.height/100
+        pos: 0, root.center_y - root.height/200
         source: 'branco.png'
 
 
     Label:
-        font_size: 70
+        font_size: root.height/10
         center_x: root.width * 0.25
         center_y: root.height * 0.85
         text: str(root.player1.score)
 
     Label:
-        font_size: 70
+        font_size: root.height/10
         center_x: root.width * 0.75
         center_y: root.height * 0.85
         text: str(root.player2.score)
@@ -140,9 +140,9 @@
 
     Player:
         id: jogador
-        size: 40, 40
+        size: root.width/7, root.width/7
         center_x: root.center_x
-        center_y: root.center_y*0.8
+        center_y: root.center_y*0.6
 
 <JogoPong>:
     PongGame:
@@ -157,8 +157,8 @@
     Widget:
         canvas:
             Rectangle:
-                size: root.width, root.width/30
-                pos: 0, root.center_y - root.width/60
+                size: root.width, root.height/100
+                pos: 0, root.center_y - root.height/200
 
 
     Widget:
@@ -195,5 +195,5 @@
         font_size: root.height/18
         size_hint: 0.7, 0.1
         pos_hint: {"center_x": 0.5, "center_y": 0.4}
-        on_release: app.root.current = 'pong'
+        on_release: root.playar()
 
